# vicious

./: .gitignore  Cargo.toml  README.md  download.sh  index.html  json.rb  json.sh
src/: app.rs  cli.rs  files.rs  gui.rs  main.rs  memory.rs  old.rs  output.rs  playback.rs  player.rs  sid.rs  sid_player.rs  sound.rs
src/app/: mod.rs
