[package]
name = "vicious"
version = "0.1.0"
edition = "2024"
default-run = "gui"

[dependencies]
sid_file = "0.1"
mos6510rs = "0.2"
anyhow = "1.0"
#resid-rs = { git = "https://github.com/fazibear/resid-rs", branch = "fix-overflows" }
resid-rs = "1.1"
cpal = "0.15"
ringbuf = "0.4"
inline_colorization = "0.1.6"
eframe = "0.31"
#egui_extras = { version = "0.31", features = ["image"]}
log = "0.4"
pretty_env_logger = "0.5"
rb = "0.4"
egui_ltreeview = "0.2"
serde = "1.0"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
cpal = { version = "0.15", features = ["wasm-bindgen"] }

[[bin]]
name = "gui"
path = "src/gui.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
